--- a/AudioFile/src/main/resources/application.properties
+++ b/AudioFile/src/main/resources/application.properties
@@ -11,9 +11,9 @@ server.port=8082
 
 #### MYSQL DATASOURCE ####
 ##### Configure to match your Database
-spring.datasource.url=jdbc:mysql://localhost:3306/FIXME?useSSL=false&useLegacyDatetimeCode=false&serverTimezone=US/Mountain
-spring.datasource.username=FIXME
-spring.datasource.password=FIXME
+spring.datasource.url=jdbc:mysql://localhost:3306/audiofiledb?useSSL=false&useLegacyDatetimeCode=false&serverTimezone=US/Mountain
+spring.datasource.username=audiofile
+spring.datasource.password=audiofile
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
